Login and Register (1st stage)

--- a/HTML/product17.html
+++ b/HTML/product17.html
@@ -8,7 +8,7 @@
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css">
 </head>
 <body>
-    <header>
+    
         <nav>
             <p class="name-logo"><span>Re</span>Shoes</p>
             <ul class="nav-link">
@@ -23,9 +23,10 @@
                 </li>
                 <li><a href="about.html">About Us</a></li>
                 <li><a href="contact.html">Contact Us</a></li>
+                <li><a href="login.html" class="login-button">Login</a></li>
             </ul>
         </nav>
-    </header>
+    
     <div class = "card-wrapper">
         <div class = "card">
           <!-- card left -->
@@ -109,6 +110,7 @@
                         <button class="size-btn">47</button>
                         <button class="size-btn">48</button>
                     </div>
+                    <h2>Size yang dipilih: <span id="selectedSize"></span></h2>
                 </div>
                 <h2>Quantity</h2>
                 <input type="number" min="0" value="1">
