--- a/HTML/shop-men.html
+++ b/HTML/shop-men.html
@@ -10,7 +10,7 @@
 </head>
 
 <body>
-    <header>
+   
         <nav>
             <p class="name-logo"><span>Re</span>Shoes</p>
 
@@ -26,9 +26,10 @@
                 </li>
                 <li><a href="about.html">About Us</a></li>
                 <li><a href="contact.html">Contact Us</a></li>
+                <li><a href="login.html" class="login-button">Login</a></li>
             </ul>
         </nav>
-    </header>
+ 
 
     <div class="title">
         <h1>Mens Products</h1>
