--- a/HTML/shop-kids.html
+++ b/HTML/shop-kids.html
@@ -10,7 +10,6 @@
 </head>
 
 <body>
-    <header>
         <nav>
             <p class="name-logo"><span>Re</span>Shoes</p>
 
@@ -26,9 +25,9 @@
                 </li>
                 <li><a href="about.html">About Us</a></li>
                 <li><a href="contact.html">Contact Us</a></li>
+                <li><a href="login.html" class="login-button">Login</a></li>
             </ul>
         </nav>
-    </header>
 
     <div class="title">
         <h1>Kids Products</h1>
