--- a/HTML/index.html
+++ b/HTML/index.html
@@ -45,6 +45,32 @@
             </div>
         </div>
     </header>
+    <div class="carousel-container">
+        <div class="carousel-items">
+            <div class="carousel-item">
+                <img src="../Assets/Images/foto kami2.png" alt="Foto kami">
+            </div>
+            <div class="carousel-item">
+                <img src="../Assets/Images/coming soon.jpg" alt="Coming Soon1">
+            </div>
+            <div class="carousel-item">
+                <img src="../Assets/Images/coming soon2.jpg" alt="Coming soon2">
+            </div>
+            <div class="carousel-item">
+                <img src="../Assets/Images/coming soon3.jpg" alt="Coming soon2">
+            </div>
+            <div class="carousel-item">
+                <img src="../Assets/Images/coming soon4.jpg" alt="Coming soon2">
+            </div>
+            <div class="carousel-item">
+                <img src="../Assets/Images/coming soon5.jpg" alt="Coming soon2">
+            </div>
+            <div class="carousel-item">
+                <img src="../Assets/Images/coming soon6.jpg" alt="Coming soon2">
+            </div>
+            <!-- Tambahkan gambar lain sesuai kebutuhan -->
+        </div>
+    </div>
     <div class="Text">
         <p>JOIN FOR BETTER WORLD</p>
     </div>
