--- a/HTML/shop-women.html
+++ b/HTML/shop-women.html
@@ -6,7 +6,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>ReShoes - Shop</title>
     <link rel="stylesheet" href="../CSS/shop.css">
-
+    <script src="https://code.jquery.com/jquery-3.5.1.min.js" defer></script>
+    <script src="../JS/search.js" defer></script>
 </head>
 
 <body>
@@ -36,6 +37,9 @@
     </div>
     
     <section class="shop-container">
+        <div class="search">
+            <input type="text" id="search" placeholder="Search products...">
+        </div>
         <!-- Example of a product item -->
         <div class="product-item">
             <a href="product8.html">
