--- a/HTML/shop.html
+++ b/HTML/shop.html
@@ -6,6 +6,8 @@
     <title>ReShoes - Shop</title>
     <link rel="stylesheet" href="../CSS/shop.css">
     <link href='https://unpkg.com/boxicons@2.1.4/css/boxicons.min.css' rel='stylesheet'>
+    <script src="https://code.jquery.com/jquery-3.5.1.min.js" defer></script>
+    <script src="../JS/search.js" defer></script>
 </head>
 
 <body>
@@ -36,6 +38,9 @@
 </div>
 
 <section class="shop-container">
+    <div class="search">
+        <input type="text" id="search" placeholder="Search products...">
+    </div>
     <!-- Example of a product item -->
     <div class="product-item">
         <a href="product1.html">
