--- a/HTML/contact.html
+++ b/HTML/contact.html
@@ -8,6 +8,7 @@
     <link rel="stylesheet" href="../CSS/contact.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css">
     <script src="../JS/contact.js" defer></script>
+    <script src="../JS/navbar.js" defer></script>
 </head>
 
 <body>
@@ -16,7 +17,7 @@
 
         <ul class="nav-link">
             <li><a href="index.html">Home</a></li>
-            <li>
+            <li class="shop-menu">
                 <a href="shop.html">Shop</a>
                 <ul class="dropdown">
                     <li><a href="shop-men.html">Men</a></li>
@@ -24,10 +25,17 @@
                     <li><a href="shop-kids.html">Kids</a></li>
                 </ul>
             </li>
+            <li class="small-menu"><a href="shop-men.html">Men</a></li>
+            <li class="small-menu"><a href="shop-women.html">Women</a></li>
+            <li class="small-menu"><a href="shop-kids.html">Men</a></li>
             <li><a href="about.html">About Us</a></li>
             <li><a href="contact.html">Contact Us</a></li>
             <li><a href="login.html" class="login-button">Login</a></li>
         </ul>
+
+        <div class="menu-icon">
+            <i class="fa-solid fa-bars"></i>
+        </div>
     </nav>
 
     <div class="cont-sec">
