--- a/HTML/product1.html
+++ b/HTML/product1.html
@@ -6,6 +6,7 @@
         <title>ReShoes - Contact Us</title>
         <link rel="stylesheet" href="../CSS/product.css">
         <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css">
+        <script src="../JS/navbar.js" defer></script>
     </head>
     <body>
             <nav>
@@ -20,10 +21,17 @@
                             <li><a href="shop-kids.html">Kids</a></li>
                         </ul>
                     </li>
+                    <li class="small-menu"><a href="shop-men.html">Men</a></li>
+                    <li class="small-menu"><a href="shop-women.html">Women</a></li>
+                    <li class="small-menu"><a href="shop-kids.html">Men</a></li>
                     <li><a href="about.html">About Us</a></li>
                     <li><a href="contact.html">Contact Us</a></li>
                     <li><a href="login.html" class="login-button">Login</a></li>
                 </ul>
+                
+                <div class="menu-icon">
+                    <i class="fa-solid fa-bars"></i>
+                </div>
             </nav>
         
         <div class="card-wrapper">
