--- a/HTML/product7.html
+++ b/HTML/product7.html
@@ -6,10 +6,12 @@
     <title>ReShoes - Contact Us</title>
     <link rel="stylesheet" href="../CSS/product.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css">
+    <script src="../JS/navbar.js" defer></script>
 </head>
 <body>
 
         <nav>
+            <p class="name-logo"><span>Re</span>Shoes</p>
             <p class="name-logo"><span>Re</span>Shoes</p>
             <ul class="nav-link">
                 <li><a href="index.html">Home</a></li>
@@ -21,10 +23,17 @@
                         <li><a href="shop-kids.html">Kids</a></li>
                     </ul>
                 </li>
+                <li class="small-menu"><a href="shop-men.html">Men</a></li>
+                <li class="small-menu"><a href="shop-women.html">Women</a></li>
+                <li class="small-menu"><a href="shop-kids.html">Men</a></li>
                 <li><a href="about.html">About Us</a></li>
                 <li><a href="contact.html">Contact Us</a></li>
                 <li><a href="login.html" class="login-button">Login</a></li>
             </ul>
+            
+            <div class="menu-icon">
+                <i class="fa-solid fa-bars"></i>
+            </div>
         </nav>
 
     <div class = "card-wrapper">
