--- a/HTML/shop.html
+++ b/HTML/shop.html
@@ -6,8 +6,10 @@
     <title>ReShoes - Shop</title>
     <link rel="stylesheet" href="../CSS/shop.css">
     <link href='https://unpkg.com/boxicons@2.1.4/css/boxicons.min.css' rel='stylesheet'>
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css">
     <script src="https://code.jquery.com/jquery-3.5.1.min.js" defer></script>
     <script src="../JS/search.js" defer></script>
+    <script src="../JS/navbar.js" defer></script>
 </head>
 
 <body>
@@ -26,10 +28,17 @@
                         <li><a href="shop-kids.html">Kids</a></li>
                     </ul>
                 </li>
+                <li class="small-menu"><a href="shop-men.html">Men</a></li>
+                <li class="small-menu"><a href="shop-women.html">Women</a></li>
+                <li class="small-menu"><a href="shop-kids.html">Men</a></li>
                 <li><a href="about.html">About Us</a></li>
                 <li><a href="contact.html">Contact Us</a></li>
                 <li><a href="login.html" class="login-button">Login</a></li>
             </ul>
+            
+            <div class="menu-icon">
+                <i class="fa-solid fa-bars"></i>
+            </div>
         </nav>
     
 
