Final Step Mobile/Responsif

--- a/HTML/index.html
+++ b/HTML/index.html
@@ -53,6 +53,7 @@
             </div>
         </div>
     </header>
+    
     <div class="carousel-container">
         <div class="carousel-items">
             <div class="carousel-item">
@@ -84,7 +85,7 @@
     </div>
     <div class="container">
         <div class="slide">
-            <div class="item" style="background-image: url(../Assets/Images/world-environment-day-preservati-20230523081832.jpg);">
+            <div class="item" style="background-image: url(../Assets/Images/bumi.png);">
                 <div class="content">
                     <div class="name">Make World Better</div>
                     <div class="des">We have to make that earth can be lived any longer</div>
@@ -119,7 +120,7 @@
                     <button>See More</button>
                 </div>
             </div>
-            <div class="item" style="background-image: url(../Assets/Images/garbage.jpg);">
+            <div class="item" style="background-image: url(../Assets/Images/lari.png);">
                 <div class="content">
                     <div class="name">Take Action</div>
                     <div class="des">Join us in taking action against pollution and waste for a cleaner planet.</div>
