--- a/HTML/product8.html
+++ b/HTML/product8.html
@@ -52,7 +52,7 @@
                 </a>
               </div>
               <div class = "img-item">
-                <a href = "product10-.html" data-id = "10">
+                <a href = "product10.html" data-id = "10">
                   <img src = "../Assets/Images/ShoeImages/recycled-shoe10.png" alt = "shoe image">
                 </a>
               </div>
