final step index

--- a/HTML/index.html
+++ b/HTML/index.html
@@ -55,6 +55,7 @@
     </header>
     
     <div class="carousel-container">
+        <h1>Coming Soon!!</h1>
         <div class="carousel-items">
             <div class="carousel-item">
                 <img src="../Assets/Images/foto kami2.png" alt="Foto kami">
