--- a/HTML/about.html
+++ b/HTML/about.html
@@ -7,7 +7,6 @@
     <title>ReShoes - About Us</title>
     <link rel="stylesheet" href="../CSS/about.css">
     <script src="https://unpkg.com/typed.js@2.1.0/dist/typed.umd.js" defer></script> <!-- library typed dari cdn github-->
-    <script src="https://code.jquery.com/jquery-3.6.0.min.js" defer></script>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css">
     <script src="../JS/about.js" defer></script>
     <script src="../JS/navbar.js" defer></script>
@@ -30,7 +29,7 @@
             </li>
             <li class="small-menu"><a href="shop-men.html">Men</a></li>
             <li class="small-menu"><a href="shop-women.html">Women</a></li>
-            <li class="small-menu"><a href="shop-kids.html">Men</a></li>
+            <li class="small-menu"><a href="shop-kids.html">Kids</a></li>
             <li><a href="about.html">About Us</a></li>
             <li><a href="contact.html">Contact Us</a></li>
             <li><a href="login.html" class="login-button">Login</a></li>
