--- a/HTML/index.html
+++ b/HTML/index.html
@@ -24,7 +24,7 @@
                 </li>
                 <li class="small-menu"><a href="shop-men.html">Men</a></li>
                 <li class="small-menu"><a href="shop-women.html">Women</a></li>
-                <li class="small-menu"><a href="shop-kids.html">Men</a></li>
+                <li class="small-menu"><a href="shop-kids.html">Kids</a></li>
                 <li><a href="about.html">About Us</a></li>
                 <li><a href="contact.html">Contact Us</a></li>
                 <li><a href="login.html" class="login-button">Login</a></li>
@@ -78,11 +78,10 @@
             <div class="carousel-item">
                 <img src="../Assets/Images/coming soon6.jpg" alt="Coming soon2">
             </div>
-            <!-- Tambahkan gambar lain sesuai kebutuhan -->
         </div>
     </div>
     <div class="Text">
-        <p>JOIN FOR BETTER WORLD</p>
+        <p>JOIN FOR BETTER WORLD</p> 
     </div>
     <div class="container">
         <div class="slide">
