--- a/HTML/shop.html
+++ b/HTML/shop.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="en"> 
     
 <head>
     <meta charset="UTF-8">
@@ -30,7 +30,7 @@
             </li>
             <li class="small-menu"><a href="shop-men.html">Men</a></li>
             <li class="small-menu"><a href="shop-women.html">Women</a></li>
-            <li class="small-menu"><a href="shop-kids.html">Men</a></li>
+            <li class="small-menu"><a href="shop-kids.html">Kids</a></li>
             <li><a href="about.html">About Us</a></li>
             <li><a href="contact.html">Contact Us</a></li>
             <li><a href="login.html" class="login-button">Login</a></li>
