--- a/HTML/index.html
+++ b/HTML/index.html
@@ -46,7 +46,7 @@
                     <i class="fa-solid fa-star"></i>
                     <i class="fa-solid fa-star"></i>
                 </div>
-                <p>The ReShoes Air Max 200 GO combines comfort with style and <span>ECO FRIENDLY</span>. It's the perfect sneaker for any occasion and for making a world without waste.</p>
+                <p>The ReShoes Air Max 200 GOOOO combines comfort with style and <span>ECO FRIENDLY</span>. It's the perfect sneaker for any occasion and for making a world without waste.</p>
             </div>
             <div class="img">
                 <img src="../Assets/Images/ReShoes-removebg-preview-double-removebg-preview.png" alt="recycleshoes">
@@ -67,17 +67,18 @@
                 <img src="../Assets/Images/coming soon2.jpg" alt="Coming soon2">
             </div>
             <div class="carousel-item">
-                <img src="../Assets/Images/coming soon3.jpg" alt="Coming soon2">
+                <img src="../Assets/Images/coming soon3.jpg" alt="Coming soon3">
             </div>
             <div class="carousel-item">
-                <img src="../Assets/Images/coming soon4.jpg" alt="Coming soon2">
+                <img src="../Assets/Images/coming soon4.jpg" alt="Coming soon4">
             </div>
             <div class="carousel-item">
-                <img src="../Assets/Images/coming soon5.jpg" alt="Coming soon2">
+                <img src="../Assets/Images/coming soon5.jpg" alt="Coming soon5">
             </div>
             <div class="carousel-item">
-                <img src="../Assets/Images/coming soon6.jpg" alt="Coming soon2">
+                <img src="../Assets/Images/coming soon6.jpg" alt="Coming soon6">
             </div>
+            
         </div>
     </div>
     <div class="Text">
