--- a/HTML/product18.html
+++ b/HTML/product18.html
@@ -25,7 +25,7 @@
                 </li>
                 <li class="small-menu"><a href="shop-men.html">Men</a></li>
                 <li class="small-menu"><a href="shop-women.html">Women</a></li>
-                <li class="small-menu"><a href="shop-kids.html">Men</a></li>
+                <li class="small-menu"><a href="shop-kids.html">Kids</a></li>
                 <li><a href="about.html">About Us</a></li>
                 <li><a href="contact.html">Contact Us</a></li>
                 <li><a href="login.html" class="login-button">Login</a></li>
